--- a/czech.html
+++ b/czech.html
@@ -727,8 +727,8 @@
                             </a>
                         </div>
                     </li>
-                    <li><a href="application.html">Анкета</a></li>
-                    <li><a href="contacts.html">Контакты</a></li>
+                   <li><a href="./index.html#application">Анкета</a></li>
+                    <li><a href="./index.html#contacts">Контакты</a></li>
                 </ul>
             </nav>
             <div class="mobile-menu">☰</div>
