--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                     <div class="contact-item">
                         <div class="contact-icon">📞</div>
                         <div>
-                            <p><strong>Телефон:</strong> +7 (707) 528-19-72</p>
+                            <p><strong>Телефон:</strong> +821029121007</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -465,14 +465,28 @@
             </div>
         </div>
     </section>
-
-    <!-- Футер -->
+       <!-- Футер -->
     <footer>
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
                     <h3>Kiparis Global Academy</h3>
                     <p>Мы помогаем студентам поступать и учиться в ведущих вузах Южной Кореи, Китая, Испании и Чехии.</p>
+                    <div class="social-links">
+                        <a href="https://instagram.com/hanguk_uniway_" target="_blank" class="social-link">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+                            </svg>
+                            @hanguk_uniway_
+                        </a>
+                        <a href="https://www.tiktok.com/@jden053" target="_blank" class="social-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 256 256">
+        <path fill="#25F4EE" d="M152.9 0h36.6v36.4c12.3 8.6 27.4 13.6 43.3 13.6V86c-16.3 0-31.9-3.6-46-10v84.1c0 47.8-38.8 86.6-86.6 86.6C52.4 246.7 13.5 207.9 13.5 160.1S52.3 73.5 100.1 73.5c5.3 0 10.5.5 15.5 1.4v39.7c-4.9-1.4-10.1-2.1-15.5-2.1-26.5 0-48.1 21.5-48.1 48.1s21.5 48.1 48.1 48.1c26.5 0 48.1-21.5 48.1-48.1V0z"/>
+        <path fill="#FE2C55" d="M189.5 36.4V72c-10.5-7.3-19.6-16.5-27-27V0h-9.6v160.1c0 47.8-38.8 86.6-86.6 86.6C52.4 246.7 13.5 207.9 13.5 160.1S52.3 73.5 100.1 73.5c5.3 0 10.5.5 15.5 1.4v39.7c-4.9-1.4-10.1-2.1-15.5-2.1-26.5 0-48.1 21.5-48.1 48.1s21.5 48.1 48.1 48.1c26.5 0 48.1-21.5 48.1-48.1V0h44.3z"/>
+      </svg>
+                            @jden053
+                        </a>
+                    </div>
                 </div>
                 <div class="footer-col">
                     <h3>Страны</h3>
@@ -487,7 +501,7 @@
                 <div class="footer-col">
                     <h3>Контакты</h3>
                     <ul>
-                        <li>📞 +7 (707) 528-19-72</li>
+                        <li>📞 +821029121007</li>
                         <li>✉️ info@kiparis-academy.ru</li>
                         <li>📍 г. Астана, ул. Образцова, д. 25</li>
                     </ul>
