Добавила видео с LFS настройкой

--- a/czech.html
+++ b/czech.html
@@ -1032,7 +1032,6 @@
             <a href="./index.html#application" class="btn btn-gold fade-in">Подать заявку</a>
         </div>
     </section>
-
   <!-- Футер -->
     <footer>
         <div class="container">
@@ -1070,8 +1069,8 @@
                     <h3>Контакты</h3>
                     <ul>
                         <li>📞 +821029121007</li>
-                        <li>✉️ info@kiparis-academy.ru</li>
-                        <li>📍 г. Астана, ул. Образцова, д. 25</li>
+                        <li>✉️ globalacademykiparis@gmail.com</li>
+                        <li>📍 충남 아산시 용화동 1527</li>
                     </ul>
                 </div>
             </div>
@@ -1080,6 +1079,7 @@
             </div>
         </div>
     </footer>
+    
     <script>
         // JavaScript для интерактивных элементов
         document.addEventListener('DOMContentLoaded', function() {
