--- a/south-korea.html
+++ b/south-korea.html
@@ -1283,7 +1283,7 @@
         </div>
     </section>
 
-   <!-- Футер -->
+    <!-- Футер -->
     <footer>
         <div class="container">
             <div class="footer-grid">
@@ -1320,8 +1320,8 @@
                     <h3>Контакты</h3>
                     <ul>
                         <li>📞 +821029121007</li>
-                        <li>✉️ info@kiparis-academy.ru</li>
-                        <li>📍 г. Астана, ул. Образцова, д. 25</li>
+                        <li>✉️ globalacademykiparis@gmail.com</li>
+                        <li>📍 충남 아산시 용화동 1527</li>
                     </ul>
                 </div>
             </div>
