--- a/spain.html
+++ b/spain.html
@@ -1031,7 +1031,7 @@
             <a href="application.html" class="btn btn-gold fade-in">Подать заявку</a>
         </div>
     </section>
- <!-- Футер -->
+   <!-- Футер -->
     <footer>
         <div class="container">
             <div class="footer-grid">
@@ -1068,8 +1068,8 @@
                     <h3>Контакты</h3>
                     <ul>
                         <li>📞 +821029121007</li>
-                        <li>✉️ info@kiparis-academy.ru</li>
-                        <li>📍 г. Астана, ул. Образцова, д. 25</li>
+                        <li>✉️ globalacademykiparis@gmail.com</li>
+                        <li>📍 충남 아산시 용화동 1527</li>
                     </ul>
                 </div>
             </div>
@@ -1078,6 +1078,8 @@
             </div>
         </div>
     </footer>
+
+
     <script>
         // JavaScript для интерактивных элементов
         document.addEventListener('DOMContentLoaded', function() {
