--- a/universities.html
+++ b/universities.html
@@ -765,8 +765,8 @@
                     <h3>Контакты</h3>
                     <ul>
                         <li>📞 +821029121007</li>
-                        <li>✉️ info@kiparis-academy.ru</li>
-                        <li>📍 г. Астана, ул. Образцова, д. 25</li>
+                        <li>✉️ globalacademykiparis@gmail.com</li>
+                        <li>📍 충남 아산시 용화동 1527</li>
                     </ul>
                 </div>
             </div>
@@ -775,7 +775,7 @@
             </div>
         </div>
     </footer>
-
+    
     <script>
         // Данные университетов
         const universities = [
