--- a/about.html
+++ b/about.html
@@ -870,7 +870,7 @@
     </section>
 
   
-     <!-- Футер -->
+      <!-- Футер -->
     <footer>
         <div class="container">
             <div class="footer-grid">
@@ -907,8 +907,8 @@
                     <h3>Контакты</h3>
                     <ul>
                         <li>📞 +821029121007</li>
-                        <li>✉️ info@kiparis-academy.ru</li>
-                        <li>📍 г. Астана, ул. Образцова, д. 25</li>
+                        <li>✉️ globalacademykiparis@gmail.com</li>
+                        <li>📍 충남 아산시 용화동 1527</li>
                     </ul>
                 </div>
             </div>
@@ -917,7 +917,6 @@
             </div>
         </div>
     </footer>
-
     <script>
         // JavaScript для интерактивных элементов
         document.addEventListener('DOMContentLoaded', function() {
