--- a/about.html
+++ b/about.html
@@ -743,6 +743,16 @@
                         <p></p>
                     </div>
                 </div>
+                 <div class="team-card fade-in">
+                    <div class="team-image" style="background-color: #e9ecef;">
+                        <img src="./images/ансар.jpeg" class="team-image" alt="">
+                    </div>
+                    <div class="team-info">
+                        <h3> Ансар</h3>
+                        <div class="position">Куратор в Италии</div>
+                        <p></p>
+                    </div>
+                </div>
                 <div class="team-card fade-in">
                     <div class="team-image" style="background-color: #e9ecef;">
                         <img src="./images/амина.jpg" class="team-image" alt="">
@@ -917,6 +927,7 @@
             </div>
         </div>
     </footer>
+
     <script>
         // JavaScript для интерактивных элементов
         document.addEventListener('DOMContentLoaded', function() {
