--- a/about.html
+++ b/about.html
@@ -270,7 +270,7 @@
         }
         /* Герой секция О нас */
         .about-hero {
-            background: linear-gradient(rgba(30, 66, 50, 0.9), rgba(12, 27, 44, 0.8)), url('https://images.unsplash.com/photo-1523240795612-9a054b0db644?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+            background: linear-gradient(rgba(30, 66, 50, 0.9), rgba(12, 27, 44, 0.8)), url('https://i.pinimg.com/1200x/c0/05/c3/c005c3fa3ab20fcbe3c07693884d8275.jpg');
             background-size: cover;
             background-position: center;
             color: var(--white);
@@ -664,7 +664,7 @@
     </style>
 </head>
 <body>
-     <!-- Шапка -->
+      <!-- Шапка -->
     <header>
         <div class="container header-container">
             <a href="index.html" class="logo">Kiparis<span>Global</span></a>
@@ -683,6 +683,10 @@
                                 <div class="country-flags" style="background-color: #DE2910;"></div>
                                 <span class="country-name">Китай</span>
                             </a>
+                            <a href="./italy.html" class="country-items">
+                                <div class="country-flags" style="background-color: #c69d0b;"></div>
+                                <span class="country-name">Италия</span>
+                            </a>
                             <a href="./spain.html" class="country-items">
                                 <div class="country-flags" style="background-color: #C60B1E;"></div>
                                 <span class="country-name">Испания</span>
@@ -693,13 +697,14 @@
                             </a>
                         </div>
                     </li>
-                    <li><a href="./index.html#application">Анкета</a></li>
+                   <li><a href="./index.html#application">Анкета</a></li>
                     <li><a href="./index.html#contacts">Контакты</a></li>
                 </ul>
             </nav>
             <div class="mobile-menu">☰</div>
         </div>
     </header>
+
 
     <!-- Герой секция О нас -->
     <section class="about-hero">
@@ -905,9 +910,10 @@
                 </div>
                 <div class="footer-col">
                     <h3>Страны</h3>
-                    <ul>
+                  <ul>
                         <li><a href="south-korea.html">Южная Корея</a></li>
                         <li><a href="china.html">Китай</a></li>
+                        <li><a href="italy.html">Италия</a></li>
                         <li><a href="spain.html">Испания</a></li>
                         <li><a href="czech.html">Чехия</a></li>
                     </ul>
