--- a/south-korea.html
+++ b/south-korea.html
@@ -849,6 +849,10 @@
                                 <div class="country-flags" style="background-color: #DE2910;"></div>
                                 <span class="country-name">Китай</span>
                             </a>
+                            <a href="./italy.html" class="country-items">
+                                <div class="country-flags" style="background-color: #c69d0b;"></div>
+                                <span class="country-name">Италия</span>
+                            </a>
                             <a href="./spain.html" class="country-items">
                                 <div class="country-flags" style="background-color: #C60B1E;"></div>
                                 <span class="country-name">Испания</span>
@@ -859,13 +863,14 @@
                             </a>
                         </div>
                     </li>
-                  <li><a href="./index.html#application">Анкета</a></li>
+                   <li><a href="./index.html#application">Анкета</a></li>
                     <li><a href="./index.html#contacts">Контакты</a></li>
                 </ul>
             </nav>
             <div class="mobile-menu">☰</div>
         </div>
     </header>
+
     <!-- Герой секция Южная Корея -->
     <section class="korea-hero">
         <div class="container">
@@ -1238,6 +1243,17 @@
                 <p>Исследуйте все возможности, которые мы предлагаем</p>
             </div>
            <div class="countries-grid">
+            <div class="country-card fade-in">
+                    <div class="country-flag" >
+                        <img src="https://www.travelandleisure.com/thmb/kE_g7YiI1N8QbsON--_5B1TXyBk=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/TAL-florence-ITCITIES0924-6aada9377bca4896a4338ab8950cca39.jpg" style="width: 100%; height: 150px;">
+
+                    </div>
+                    <div class="country-info">
+                        <h3>Италия</h3>
+                        <p>Искусство, наука и вкус Италии в каждом дне обучения</p>
+                        <a href="italy.html" class="btn" style="margin-top: 20px;">Подробнее</a>
+                    </div>
+                </div>
                 <div class="country-card fade-in">
                     <div class="country-flag" >
                          <img src="./images/chinese.jpg" style="width: 100%; height: 150px;">
@@ -1308,9 +1324,10 @@
                 </div>
                 <div class="footer-col">
                     <h3>Страны</h3>
-                    <ul>
+                   <ul>
                         <li><a href="south-korea.html">Южная Корея</a></li>
                         <li><a href="china.html">Китай</a></li>
+                        <li><a href="italy.html">Италия</a></li>
                         <li><a href="spain.html">Испания</a></li>
                         <li><a href="czech.html">Чехия</a></li>
                     </ul>
