--- a/about.html
+++ b/about.html
@@ -740,11 +740,13 @@
                 <p>Профессионалы с международным опытом, которые помогут вам на каждом этапе</p>
             </div>
             <div class="team-grid">
-                <div class="team-card fade-in">
-                    <div class="team-image" style="background-color: #e9ecef;"></div>
+              <div class="team-card fade-in">
+                    <div class="team-image" style="background-color: #e9ecef;">
+                        <img src="./images/виктория.jpg" class="team-image" alt="">
+                    </div>
                     <div class="team-info">
-                        <h3>Деннис</h3>
-                        <div class="position">Основатель и CEO</div>
+                        <h3>Виктория</h3>
+                        <div class="position">Куратор в Южной Кореи</div>
                         <p></p>
                     </div>
                 </div>
@@ -846,15 +848,15 @@
             <div class="testimonials-grid">
                 <div class="testimonial-card fade-in">
                     <div class="testimonial-text">
-                        Kiparis Global Academy помогли мне поступить в Seoul National University. Особенно хочу поблагодарить за помощь с мотивационным письмом - его хвалили при поступлении! Сейчас учусь на факультете международных отношений и очень благодарен команде за поддержку.
+        Kiparis Global Academy  маған Оңтүстік Кореядағы Yonsei University-ге түсуге толық көмек көрсетті — құжаттарды дайындаудан бастап, сұхбатқа дейін бірге дайындалдық. Әсіресе мотивациялық хат жазуда және визаны рәсімдеуде көп қолдау болды. Қазір Сеулде оқып, жаңа өмір бастағаныма қуаныштымын!
                     </div>
-                    <div class="testimonial-author">
-                        <div class="author-avatar">АС</div>
-                        <div class="author-info">
-                            <h4>Алексей Смирнов</h4>
-                            <p>Seoul National University, Южная Корея</p>
-                        </div>
-                    </div>
+                      <div class="testimonial-author">
+        <div class="author-avatar">АН</div>
+        <div class="author-info">
+            <h4>Айгерім Нұрғалиева</h4>
+            <p>Yonsei University, Оңтүстік Корея (Қазақстан)</p>
+        </div>
+    </div>
                 </div>
                 <div class="testimonial-card fade-in">
                     <div class="testimonial-text">
@@ -869,17 +871,18 @@
                     </div>
                 </div>
                 <div class="testimonial-card fade-in">
-                    <div class="testimonial-text">
-                        Выбрал Kiparis Global Academy по рекомендации друга и не пожалел! Поступил в University of Barcelona на программу MBA. Команда сопровождала меня на всех этапах - от выбора программы до получения визы. Особенно ценю, что всегда были на связи и оперативно решали все вопросы.
-                    </div>
-                    <div class="testimonial-author">
-                        <div class="author-avatar">ДК</div>
-                        <div class="author-info">
-                            <h4>Денис Ковалев</h4>
-                            <p>University of Barcelona, Испания</p>
-                        </div>
-                    </div>
-                </div>
+    <div class="testimonial-text">
+        Kiparis Global Academy командасына үлкен алғыс! Олар маған Чехиядағы Charles University-ге түсуге көмектесті. Алғашында Еуропада оқуға түсу қиын сияқты көрінген, бірақ кеңесшілерім әр қадамды түсіндіріп, құжаттарды аударудан бастап, виза алу мен жатақхана табуға дейін бірге жүрді. Қазір Прагада оқып жүрмін солардың көмегімен.
+    </div>
+    <div class="testimonial-author">
+        <div class="author-avatar">ДА</div>
+        <div class="author-info">
+            <h4>Динара Абдрахман</h4>
+            <p>Charles University, Чехия (Қазақстан)</p>
+        </div>
+    </div>
+</div>
+                
             </div>
         </div>
     </section>
