--- a/about.html
+++ b/about.html
@@ -819,7 +819,7 @@
                     <div class="stat-text">Успешных поступлений</div>
                 </div>
                 <div class="stat-card fade-in">
-                    <div class="stat-number">4</div>
+                    <div class="stat-number">5</div>
                     <div class="stat-text">Страны обучения</div>
                 </div>
                 <div class="stat-card fade-in">
@@ -831,8 +831,8 @@
                     <div class="stat-text">Университетов-партнеров</div>
                 </div>
                 <div class="stat-card fade-in">
-                    <div class="stat-number">5</div>
-                    <div class="stat-text">Лет на рынке</div>
+                    <div class="stat-number">1</div>
+                    <div class="stat-text">Всего за 1 год</div>
                 </div>
             </div>
         </div>
