--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             </div>
             <div class="universities-grid">
   <!-- KAIST -->
-  <!-- <div class="university-card fade-in" data-country="korea">
+  <div class="university-card fade-in" data-country="korea">
     <div class="university-image" style="background-color: #e9ecef;">
       <img src="./images/kaist.jpg" alt="KAIST" class="university-image">
       <div class="university-country">Южная Корея</div>
@@ -218,7 +218,7 @@
       </div>
       <a href="kaist.html" class="btn">Подробнее</a>
     </div>
-  </div> -->
+  </div>
 
   <!-- Seoul National University -->
   <div class="university-card fade-in" data-country="korea">
@@ -255,7 +255,7 @@
   </div>
 
   <!-- Kyungbok University -->
-  <!-- <div class="university-card fade-in" data-country="korea">
+  <div class="university-card fade-in" data-country="korea">
     <div class="university-image" style="background-color: #e9ecef;">
       <img src="./images/kyungbook.jpg" alt="Kyungbok University" class="university-image" style="width: 100%;">
       <div class="university-country">Южная Корея</div>
@@ -269,7 +269,7 @@
       </div>
       <a href="kyungbok.html" class="btn">Подробнее</a>
     </div>
-  </div> -->
+  </div>
 
   <!-- Ewha Womans University -->
   <div class="university-card fade-in" data-country="korea">
@@ -338,23 +338,92 @@
   </div>
 </div>
 
+            <!-- Peking University -->
+            <div class="university-card fade-in" data-country="china">
+                <div class="university-image" style="background-color: #e9ecef;">
+                    <img src="./images/peking.jpg" alt="Peking University" class="university-image">
+                    <div class="university-country">Китай</div>
+                </div>
+                <div class="university-info">
+                    <h3>Peking University</h3>
+                    <p>Один из старейших и самых престижных университетов Китая</p>
+                    <div class="university-meta">
+                        <span>📍 Пекин</span>
+                        <span>💰 от $5,000/год</span>
+                    </div>
+                    <a href="https://english.pku.edu.cn/" class="btn">Подробнее</a>
+                </div>
+            </div>
+            
+            <!-- Карлов университет (Чехия) -->
+            <div class="university-card fade-in" data-country="czech">
+                <div class="university-image" style="background-color: #e9ecef;">
+                    <img src="https://static.tildacdn.com/tild6564-6230-4662-b733-366334636531/---2-1920x1024.jpeg" alt="Charles University" class="university-image">
+                    <div class="university-country">Чехия</div>
+                </div>
+                <div class="university-info">
+                    <h3>Univerzita Karlova</h3>
+                    <p>Старейший университет Центральной Европы, основанный в 1348 году</p>
+                    <div class="university-meta">
+                        <span>📍 Прага</span>
+                        <span>💰 Бесплатно*</span>
+                    </div>
+                    <a href="https://cuni.cz/UK-1.html" class="btn">Подробнее</a>
+                </div>
+            </div>
 
-  <!-- Pusan National University -->
-  <div class="university-card fade-in" data-country="korea">
-    <div class="university-image" style="background-color: #e9ecef;">
-      <img src="./images/pusan.jpg" alt="Pusan National University" class="university-image" style="width: 100%;">
-      <div class="university-country">Южная Корея</div>
-    </div>
-    <div class="university-info">
-      <h3>Pusan National University</h3>
-      <p>Один из лучших национальных вузов Кореи, известен инженерными программами</p>
-      <div class="university-meta">
-        <span>📍 Пусан</span>
-        <span>💰 от $4,000/год</span>
-      </div>
-      <a href="https://www.pusan.ac.kr/eng/" class="btn">Подробнее</a>
-    </div>
-  </div>
+            <!-- Чешский технический университет (Чехия) -->
+            <div class="university-card fade-in" data-country="czech">
+                <div class="university-image" style="background-color: #e9ecef;">
+                    <img src="https://static.tildacdn.com/tild3765-3537-4063-a437-306339343832/__.png" alt="Czech Technical University" class="university-image">
+                    <div class="university-country">Чехия</div>
+                </div>
+                <div class="university-info">
+                    <h3>České vysoké učení technické</h3>
+                    <p>Ведущий технический университет Чехии с программами в области инженерии и IT</p>
+                    <div class="university-meta">
+                        <span>📍 Прага</span>
+                        <span>💰 Бесплатно*</span>
+                    </div>
+                    <a href="http://cvut.cz/" class="btn">Подробнее</a>
+                </div>
+            </div>
+
+            <!-- Высшая школа экономики (Чехия) -->
+            <div class="university-card fade-in" data-country="czech">
+                <div class="university-image" style="background-color: #e9ecef;">
+                    <img src="https://cdn.globaldialog.ru/_/manager/files/546/a43f4bd000/vse1.jpg" alt="University of Economics, Prague" class="university-image">
+                    <div class="university-country">Чехия</div>
+                </div>
+                <div class="university-info">
+                    <h3>Vysoká škola ekonomická</h3>
+                    <p>Ведущий экономический университет Центральной Европы с программами на английском</p>
+                    <div class="university-meta">
+                        <span>📍 Прага</span>
+                        <span>💰 Бесплатно*</span>
+                    </div>
+                    <a href="http://www.vse.cz/" class="btn">Подробнее</a>
+                </div>
+            </div>
+
+            <!-- Масариков университет (Чехия) -->
+            <div class="university-card fade-in" data-country="czech">
+                <div class="university-image" style="background-color: #e9ecef;">
+                    <img src="https://images.gostudy.cz/images/2014/12/Masarikov.jpg" alt="Masaryk University" class="university-image">
+                    <div class="university-country">Чехия</div>
+                </div>
+                <div class="university-info">
+                    <h3>Masarykova univerzita</h3>
+                    <p>Второй по величине университет Чехии с современным кампусом в Брно</p>
+                    <div class="university-meta">
+                        <span>📍 Брно</span>
+                        <span>💰 Бесплатно*</span>
+                    </div>
+                    <a href="https://www.muni.cz/" class="btn">Подробнее</a>
+                </div>
+            </div>
+        </div>
+
 
   
 </div>
