--- a/about.html
+++ b/about.html
@@ -739,15 +739,24 @@
                 <h2>Наша команда</h2>
                 <p>Профессионалы с международным опытом, которые помогут вам на каждом этапе</p>
             </div>
+            
             <div class="team-grid">
+                 <div class="team-card fade-in">
+                    <div class="team-image" style="background-color: #e9ecef;">
+                        <img src="./images/acsk.jpeg" class="team-image" alt="">
+                    </div>
+                    <div class="team-info">
+                        <h3>Асыл</h3>
+                        <div class="position">Куратор в Китае</div>
+                    </div>
+                </div>
               <div class="team-card fade-in">
                     <div class="team-image" style="background-color: #e9ecef;">
                         <img src="./images/виктория.jpg" class="team-image" alt="">
                     </div>
                     <div class="team-info">
                         <h3>Виктория</h3>
-                        <div class="position">Куратор в Южной Кореи</div>
-                        <p></p>
+                        <div class="position">Куратор в Южной Корее</div>
                     </div>
                 </div>
                  <div class="team-card fade-in">
@@ -766,7 +775,7 @@
                     </div>
                     <div class="team-info">
                         <h3> Амина</h3>
-                        <div class="position">Куратор в Южной Кореи</div>
+                        <div class="position">Куратор в Южной Корее</div>
                         <p></p>
                     </div>
                 </div>
@@ -776,8 +785,17 @@
                     </div>
                     <div class="team-info">
                         <h3>Альтаир</h3>
-                        <div class="position">Куратор в Южной Кореи</div>
+                        <div class="position">Куратор в Южной Корее</div>
                         <p> </p>
+                    </div>
+                </div>
+                 <div class="team-card fade-in">
+                    <div class="team-image" style="background-color: #e9ecef;">
+                        <img src="./images/сауле.jpg" class="team-image" alt="">
+                    </div>
+                    <div class="team-info">
+                        <h3>Сауле</h3>
+                        <div class="position">Куратор в Китае</div>
                     </div>
                 </div>
                 <div class="team-card fade-in">
@@ -796,7 +814,7 @@
                     </div>
                     <div class="team-info">
                         <h3>Виктория</h3>
-                        <div class="position">Куратор в Южной Кореи</div>
+                        <div class="position">Куратор в Южной Корее</div>
                         <p></p>
                     </div>
                 </div>
