--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </div>
                     <div class="country-info">
                         <h3>Чехия</h3>
-                        <p>Качественное и доступное образование в Европы</p>
+                        <p>Качественное и доступное образование</p>
                         <a href="czech.html" class="btn">Подробнее</a>
                     </div>
                 </div>
